changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Add code to have identified objects merge together with like objects.
identify() modified to return object, which may be merged object.
examine() modified to stop processing once it does a skill ident
on an item, since the pointer is has may now be invalid.
MSW 2010-11-18

Add ability for server to provide choice of starting items for new - 
characters - add support for sending that data and receiving and validating
the responses.  Add DRAGON_FOCUS type which changes the dragon focus.
----
common/arch.c: Update type checking.  Remove check for < 0 - since
    unsigned value is passed in, that will never happen.
doc/Developers/protocol: Add information about choice handling.
include/define.h: Add dragon_focus type.
server/ob_types.c: Add call to init_type_dragon_focus()
socket/requestinfo.c: Include choice options in race/class information
   we send to client.
socket/request.c: Add handling of item choices during character creation.
types/Makefile.am, types/dragon_focus/dragon_focus.c: Add code to
    handle applying dragon focus object.
MSW 2010-11-14

Tentative fix fox unability to create characters with some clients.
Nicolas Weeger 2010-11-14

Correctly copy initial map information when using advanced character creation.
This ensures that if a player dies she'll come back to the initial spot
instead of the hall of selection.
Fix for bug #3108219: Wrong map upon player death.
Nicolas Weeger 2010-11-14

Make skill tools be picked up by the 'magical device' category.
This implements part of feature request #3094026: auto-pickup option for