@@ -14,6 +14,14 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix bug 3028405 - Too high bargaining experience when selling containers -
+due to variations in shop pricing (probably another bug), it can sometimes be
+the case that bargaining skill results in a higher price (by 1 sp) - I think
+this might just be a rounding error - however, since the value being used
+was unsigned, this overflowed into high value, meaning high exp.  Change
+that to unsigned, and now no overflow and not lots of exp.
+MSW 2010-11-19
+
 Add code to have identified objects merge together with like objects.
 identify() modified to return object, which may be merged object.
 examine() modified to stop processing once it does a skill ident
